# GCControllerEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GCControllerEmulator/: CMakeLists.txt
GCControllerEmulator/src/: Base.h  Controller.h  GCCAdapter.cpp  GCCAdapter.h  GCCPort.cpp  GCCPort.h  main.cpp
