cmake_minimum_required(VERSION 3.20)

set(GC_CONTROLLER_EMULATOR_PROJECT_NAME "GCControllerEmulator" PARENT_SCOPE)
set(GC_CONTROLLER_EMULATOR_PROJECT_NAME "GCControllerEmulator")

set(GC_CONTROLLER_EMULATOR_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(GC_CONTROLLER_EMULATOR_VENDOR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor)

set(GC_CONTROLLER_EMULATOR_SOURCE_FILES ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/main.cpp)

add_library(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} SHARED ${GC_CONTROLLER_EMULATOR_SOURCE_FILES})
target_include_directories(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} PRIVATE ${GC_CONTROLLER_EMULATOR_SOURCE_DIR})
