set(GC_CONTROLLER_EMULATOR_PROJECT_NAME "GCControllerEmulator" PARENT_SCOPE)
set(GC_CONTROLLER_EMULATOR_PROJECT_NAME "GCControllerEmulator")

set(GC_CONTROLLER_EMULATOR_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(GC_CONTROLLER_EMULATOR_VENDOR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor)

set(GC_CONTROLLER_EMULATOR_SOURCE_FILES 
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/Base.h
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/Controller.h
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/main.cpp)

add_library(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} SHARED ${GC_CONTROLLER_EMULATOR_SOURCE_FILES})
target_include_directories(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} PRIVATE ${GC_CONTROLLER_EMULATOR_SOURCE_DIR})
target_compile_definitions(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} PRIVATE GC_CONTROLLER_EMULATOR_DLL)
