set(GC_CONTROLLER_EMULATOR_PROJECT_NAME "GCControllerEmulator" PARENT_SCOPE)
set(GC_CONTROLLER_EMULATOR_PROJECT_NAME "GCControllerEmulator")

set(GC_CONTROLLER_EMULATOR_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(GC_CONTROLLER_EMULATOR_VENDOR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor)

set(GC_CONTROLLER_EMULATOR_HEADER_FILES
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/Base.h
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/Controller.h
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/GCCPort.h)

set(GC_CONTROLLER_EMULATOR_SOURCE_FILES 
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR}/GCCPort.cpp)
# libusb
add_subdirectory(${GC_CONTROLLER_EMULATOR_VENDOR_DIR}/libusb)
set(LIBUSB_INCLUDE_DIR ${GC_CONTROLLER_EMULATOR_VENDOR_DIR}/libusb/libusb)
set(LIBUSB_LIBRARIES usb-1.0)

# ViGEm Client
add_subdirectory(${GC_CONTROLLER_EMULATOR_VENDOR_DIR}/ViGEmClient)
set(VIGEM_CLIENT_INCLUDE_DIR ${GC_CONTROLLER_EMULATOR_VENDOR_DIR}/ViGEmClient/include)
set(VIGEM_CLIENT_LIBRARIES ViGEmClient setupapi.lib)

add_library(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} SHARED 
    ${GC_CONTROLLER_EMULATOR_HEADER_FILES} ${GC_CONTROLLER_EMULATOR_SOURCE_FILES})

target_include_directories(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} PRIVATE 
    ${GC_CONTROLLER_EMULATOR_SOURCE_DIR} ${LIBUSB_INCLUDE_DIR} ${VIGEM_CLIENT_INCLUDE_DIR})

target_compile_definitions(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} PRIVATE 
    GC_CONTROLLER_EMULATOR_DLL)
    
target_link_libraries(${GC_CONTROLLER_EMULATOR_PROJECT_NAME} PRIVATE 
    ${LIBUSB_LIBRARIES} ${VIGEM_CLIENT_LIBRARIES})
